Prevent profile image flicker

--- a/app/src/components/user-profile-summary/style.sass
+++ b/app/src/components/user-profile-summary/style.sass
@@ -19,6 +19,7 @@
       width: 100%
       height: 100%
       object-fit: cover
+      opacity: 0 // Reverted in JS when size is set
 
   .name
     font-family: $font-nunito
